[package]
name = "magdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
bytes = "1.4.0"
futures = "0.3.28"
hex = "0.4.3"
pin-project = "1.1.0"
#popol = "3.0.0"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
url = "2.4.0"
urlencoding = "2.1.2"

